k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-news-aggregator
  namespace: tech-news-aggregator
spec:
  selector:
    app: tech-news-aggregator
  ports:
    - port: 80
      targetPort: 80
